--- a/KinectWPFOpenCV/MainWindow.xaml
+++ b/KinectWPFOpenCV/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KinectWPFOpenCV.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Width="1024" Height="768" WindowStyle="None" AllowsTransparency="True">
+        Title="Kinect OpenCV blob detection" Width="1024" Height="768" WindowStyle="None" AllowsTransparency="True" Icon="Images/Status.png">
     <Border BorderBrush="#00bcf2" BorderThickness="1" >
         <Grid Margin="0,0,-1,0">
 
