Add basic support of Intel(R) Perceptual Computing SDK

--- a/KinectWPFOpenCV/MainWindow.xaml
+++ b/KinectWPFOpenCV/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KinectWPFOpenCV.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kinect OpenCV blob detection" Width="1024" Height="768" WindowStyle="None" AllowsTransparency="True" Icon="Images/Status.png">
+        Title="OpenCV blob detection for depth sensor" Width="1024" Height="768" WindowStyle="None" AllowsTransparency="True" Icon="Images/Status.png">
     <Border BorderBrush="#00bcf2" BorderThickness="1" >
         <Grid Margin="0,0,-1,0">
 
@@ -22,9 +22,9 @@
             </Button>
 
             <Image Source="Images\Status.png" Stretch="None" HorizontalAlignment="Left"  Grid.Column="1"/>
-            <TextBlock x:Name="title" Text="Kinect + OpenCV " HorizontalAlignment="Left" Margin="65,26,0,26" VerticalAlignment="Center" FontFamily="{StaticResource KinectFontLight}" Foreground="{StaticResource TitleForegroundBrush}" FontSize="{StaticResource HeaderFontSize}" Grid.Column="1"  />
+            <TextBlock x:Name="title" Text="Depth + OpenCV " HorizontalAlignment="Left" Margin="65,26,0,26" VerticalAlignment="Center" FontFamily="{StaticResource KinectFontLight}" Foreground="{StaticResource TitleForegroundBrush}" FontSize="{StaticResource HeaderFontSize}" Grid.Column="1"  />
             <Rectangle Fill="#666" Grid.Row="1" Margin="15 0 10 15" Grid.ColumnSpan="2" />
-            <TextBlock x:Name="txtError" Grid.Row="1" Text="No Kinect Found" Visibility="Collapsed" FontFamily="{StaticResource KinectFontLight}" Foreground="#ccc" FontSize="21" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
+            <TextBlock x:Name="txtError" Grid.Row="1" Text="No Sensor Found" Visibility="Collapsed" FontFamily="{StaticResource KinectFontLight}" Foreground="#ccc" FontSize="21" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
 
             <StackPanel Margin="15 0 10 15" Grid.Row="1" Grid.ColumnSpan="2">
                 <TextBlock Name="txtOut" Text="Tracking" Padding="10" Background="#ccc" Grid.Row="0" />
@@ -56,7 +56,7 @@
                         </StackPanel>
                         <TextBlock TextWrapping="Wrap" x:Name="txtOscStatus" Text="Osc Status" Margin="10 10 0 0" Foreground="#FFC7C7C7" />
                         <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
-                            <TextBlock Text="Kinect" Margin="10 0 0 0" Foreground="#FFC7C7C7" />
+                            <TextBlock Text="Sensor" Margin="10 0 0 0" Foreground="#FFC7C7C7" />
                             <TextBlock TextWrapping="Wrap" x:Name="txtInfo" Text="N/A" Margin="10 0 0 0" Foreground="#FFC7C7C7"/>
                             <TextBlock TextWrapping="Wrap" x:Name="txtFPS" Text="0" Margin="10 0 0 0" Foreground="#FFC7C7C7" />
                         </StackPanel>
@@ -97,21 +97,21 @@
                     <CheckBox x:Name="chkFlipH" Content="Flip Horizontal" VerticalAlignment="Center" Margin="10" IsChecked="True" />
                     <CheckBox x:Name="chkFlipV" Content="Flip Vertical" VerticalAlignment="Center" Margin="10" />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Visibility="Collapsed">
                     <TextBlock Text="Min Distance" Padding="10"/>
                     <CheckBox x:Name="chkAutoMin" Content="Auto" VerticalAlignment="Center" Checked="chkAutoMin_Checked" Unchecked="chkAutoMin_Unchecked" IsChecked="True" />
                 </StackPanel>
-                <StackPanel  Orientation="Horizontal">
-                    <Slider Width="250"  Minimum="0" Value="0"  Maximum="3000" TickFrequency="1" IsSnapToTickEnabled="True" Interval="1" Margin="5"  x:Name="sliderMin" Padding="10" IsEnabled="False"/>
+                <StackPanel  Orientation="Horizontal" Visibility="Collapsed">
+                    <Slider Width="250"  Minimum="0" Value="0"  Maximum="3000" TickFrequency="1" IsSnapToTickEnabled="True" Interval="1" Margin="5"  x:Name="sliderMin" Padding="10" IsEnabled="False" />
                     <TextBlock Text="{Binding Value, ElementName=sliderMin}" VerticalAlignment="Center" />
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Visibility="Collapsed">
                     <TextBlock Text="Max Distance" Padding="10"/>
                     <CheckBox x:Name="chkAutoMax" Content="Auto" VerticalAlignment="Center" Checked="chkAutoMax_Checked" Unchecked="chkAutoMax_Unchecked" IsChecked="True" />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Slider Width="250" Minimum="900" Value="6000" Maximum="6000" TickFrequency="1" IsSnapToTickEnabled="True" Interval="1" Margin="5" x:Name="sliderMax" Padding="10" IsEnabled="False"/>
+                <StackPanel Orientation="Horizontal" Visibility="Collapsed">
+                    <Slider Width="250" Value="6000" Maximum="6000" TickFrequency="1" IsSnapToTickEnabled="True" Interval="1" Margin="5" x:Name="sliderMax" Padding="10" IsEnabled="False"/>
                     <TextBlock Text="{Binding Value, ElementName=sliderMax}" VerticalAlignment="Center" />
                 </StackPanel>
 
